--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
 ### IntelliJ IDEA ###
-*.idea
+*/.idea
 *.iws
 *.iml
 *.ipr
